--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
             <version>${org.springframework.version}</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.1.1.Final</version>
+        </dependency>
+        
     </dependencies>
     
 </project>
