--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <javassist.version>3.18.1-GA</javassist.version>
 
         <!-- persistence -->
+<!--        <hibernate.version>4.1.9.Final</hibernate.version>-->
         <hibernate.version>4.3.5.Final</hibernate.version>
     </properties>
     
@@ -38,6 +39,12 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
         
@@ -67,6 +74,13 @@
             <artifactId>spring-orm</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.5.2.RELEASE</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
@@ -77,7 +91,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>5.1.1.Final</version>
+            <version>5.0.3.Final</version>
         </dependency>
         
     </dependencies>
