--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -5,5 +5,6 @@ db.password = sa
 
 hibernate.show_sql                          = true
 hibernate.dialect                           = org.hibernate.dialect.DerbyDialect
+jpa.db.type                                 = DERBY
 hibernate.hbm2ddl.auto                      = update
 hibernate.bytecode.use_reflection_optimizer = auto
