--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
     
     <modules>
         <module>core</module>
-    </modules>
+    <module>hibernate-forms-web</module>
+  </modules>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
