--- a/hibernate-forms-web/pom.xml
+++ b/hibernate-forms-web/pom.xml
@@ -202,14 +202,14 @@
             <groupId>org.apache.taglibs</groupId>
             <artifactId>taglibs-standard-impl</artifactId>
             <version>1.2.1</version>
-            <scope>provided</scope>
+<!--            <scope>provided</scope>-->
         </dependency>
         
         <dependency>
             <groupId>org.apache.taglibs</groupId>
             <artifactId>taglibs-standard-spec</artifactId>
             <version>1.2.1</version>
-            <scope>provided</scope>
+<!--            <scope>provided</scope>-->
         </dependency>
 
 
@@ -231,7 +231,12 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>5.0.3.Final</version>
-        </dependency>    
-                                    
+        </dependency>
+        
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>altkom-hibernate</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
