--- a/hibernate-forms-web/src/main/resources/system.properties
+++ b/hibernate-forms-web/src/main/resources/system.properties
@@ -1,7 +1,13 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-jdbc.driver=
-jdbc.url=
-jdbc.username=
-jdbc.password=
+db.driver   = org.apache.derby.jdbc.ClientDriver
+db.url      = jdbc:derby://localhost:1527/forms
+db.username = sa
+db.password = sa
+
+hibernate.show_sql                          = true
+hibernate.dialect                           = org.hibernate.dialect.DerbyDialect
+jpa.db.type                                 = DERBY
+hibernate.hbm2ddl.auto                      = update
+hibernate.bytecode.use_reflection_optimizer = auto
