--- a/hibernate-forms-web/src/main/webapp/WEB-INF/web.xml
+++ b/hibernate-forms-web/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,8 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            /WEB-INF/hibernate-forms-web-servlet.xml          
+            classpath:applicationContext.xml
+<!--            /WEB-INF/hibernate-forms-web-servlet.xml          -->
         </param-value>
     </context-param>
     
@@ -50,7 +51,7 @@
     </filter-mapping>
     
     
-    <!--filter>
+    <filter>
         <filter-name>openEntityManagerInViewFilter</filter-name>
         <filter-class>
             org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter
@@ -64,7 +65,7 @@
     <filter-mapping>
         <filter-name>openEntityManagerInViewFilter</filter-name>
         <url-pattern>*.htm</url-pattern>
-    </filter-mapping-->
+    </filter-mapping>
     
     <!--filter>
         <filter-name>springSecurityFilterChain</filter-name>
