--- a/hibernate-forms-web/pom.xml
+++ b/hibernate-forms-web/pom.xml
@@ -25,12 +25,12 @@
         
         <!--        poniższa zależnośc powoduje problemy z uruchamianiem testów jenostokwych, ponieważ dostarcza tylko interfejsów bez implementacji -->
         
-        <!--        <dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>6.0</version>
             <scope>provided</scope>
-        </dependency>-->
+        </dependency>
         
         <dependency>
             <groupId>log4j</groupId>
