--- a/hibernate-forms-web/src/main/webapp/WEB-INF/web.xml
+++ b/hibernate-forms-web/src/main/webapp/WEB-INF/web.xml
@@ -86,6 +86,6 @@
         <location>/404.htm</location>
     </error-page-->
     <welcome-file-list>
-        <welcome-file>home.htm</welcome-file>
+        <welcome-file>showForms.htm</welcome-file>
     </welcome-file-list>
 </web-app>
