--- a/core/pom.xml
+++ b/core/pom.xml
@@ -17,7 +17,7 @@
         <javassist.version>3.18.1-GA</javassist.version>
 
         <!-- persistence -->
-<!--        <hibernate.version>4.1.9.Final</hibernate.version>-->
+        <!--        <hibernate.version>4.1.9.Final</hibernate.version>-->
         <hibernate.version>4.3.5.Final</hibernate.version>
     </properties>
     
@@ -92,6 +92,18 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>5.0.3.Final</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-envers</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-envers</artifactId>
+            <version>0.2.0.BUILD-SNAPSHOT</version>
         </dependency>
         
     </dependencies>
