--- a/core/pom.xml
+++ b/core/pom.xml
@@ -106,6 +106,12 @@
             <version>0.2.0.BUILD-SNAPSHOT</version>
         </dependency>
         
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-ehcache</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        
     </dependencies>
     
 </project>
