--- a/core/pom.xml
+++ b/core/pom.xml
@@ -94,6 +94,16 @@
             <version>5.0.3.Final</version>
         </dependency>
         
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-envers</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-envers</artifactId>
+            <version>0.2.0.BUILD-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     
 </project>
